# gitz

./: Cargo.toml  README.md  TODO.md
src/: app.rs  config.rs  errors.rs  event.rs  main.rs  utils.rs
src/commands/: add.rs  commit.rs  init.rs  mod.rs
src/git/: commit.rs  mod.rs  repository.rs  status.rs
src/ui/components/: file_list.rs  mod.rs  status_bar.rs
src/ui/views/: mod.rs  repo_view.rs  workflow_view.rs  worktrees_view.rs
