[package]
name = "gitpulse"
version = "2.2.0"
edition = "2021"
authors = ["Syntax-XXX <me@syntax-xxx.is-a.dev>"]
license = "MIT"
description = "⚡ A blazingly fast terminal UI for GitPulse"
repository = "https://github.com/Syntax-XXX/gitpulse"
keywords = ["git", "tui", "cli", "version-control", "terminal"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
git2 = "0.18"
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.38", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
config = "0.14"
dirs = "5.0"
chrono = "0.4"
syntect = "5.2"
unicode-width = "0.1"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
